force-app/main/default/objects/User/fields/Diet_period_in_weeks__c.field-meta.xml
<CustomField>
    <fullName>Diet_period_in_weeks__c</fullName>
    <label>Diet period in weeks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>