force-app/main/default/objects/User/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rapid weight loss (~1kg per week)
                    </fullName>
                <label>Rapid weight loss</label>
            </value>
            <value>
                <fullName>Quick weight loss (~0.75kg per week)</fullName>
                <label>Quick weight loss</label>
            </value>
            <value>
                <fullName>Moderate weight loss (~0.5kg per week)
                    </fullName>
                <label>Moderate weight loss</label>
            </value>
            <value>
                <fullName>Slow weight loss (~0.25kg per week)
                    </fullName>
                <label>Slow weight loss</label>
            </value>
            <value>
                <fullName>Keeping weight</fullName>
            </value>
            <value>
                <fullName>Rapid weight gain (~1kg per week)
                    </fullName>
                <label>Rapid weight gain</label>
            </value>
            <value>
                <fullName>Quick weight gain (~0.75kg per week)</fullName>
                <label>Quick weight gain</label>
            </value>
            <value>
                <fullName>Moderate weight gain (~0.5kg per week)
                    </fullName>
                <label>Moderate weight gain</label>
            </value>
            <value>
                <fullName>Slow weight gain (~0.25kg per week)
                    </fullName>
                <label>Slow weight gain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>