force-app/main/default/objects/User/fields/PAL__c.field-meta.xml
<CustomField>
    <fullName>PAL__c</fullName>
    <label>PAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lying in bed</fullName>
            </value>
            <value>
                <fullName>Low physical activity</fullName>
            </value>
            <value>
                <fullName>Moderate physical activity</fullName>
            </value>
            <value>
                <fullName>Regular exercise 2-3 times a week</fullName>
            </value>
            <value>
                <fullName>Daily exercises</fullName>
            </value>
            <value>
                <fullName>Professional athlete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>