force-app/main/default/objects/User/fields/Special_points__c.field-meta.xml
<CustomField>
    <fullName>Special_points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Special points</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>