force-app/main/default/objects/User/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>