force-app/main/default/objects/User/fields/Target_Weight__c.field-meta.xml
<CustomField>
    <fullName>Target_Weight__c</fullName>
    <label>Target Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>