force-app/main/default/objects/User/fields/Total_Calories__c.field-meta.xml
<CustomField>
    <fullName>Total_Calories__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Calories</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>