force-app/main/default/objects/User/fields/Total_Carbohydrates__c.field-meta.xml
<CustomField>
    <fullName>Total_Carbohydrates__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Carbohydrates</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>