force-app/main/default/objects/User/fields/Total_Fat__c.field-meta.xml
<CustomField>
    <fullName>Total_Fat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Fat</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>