force-app/main/default/objects/User/fields/Total_Proteins__c.field-meta.xml
<CustomField>
    <fullName>Total_Proteins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Proteins</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>